[no bug] Updated code with reduced number of warnings.
git-svn-id: svn://137.122.89.28/projetseg/trunk@3020 1d5a7336-c65e-6947-a78c-d4236001c669