@@ -230,7 +230,7 @@ public class KPIInformationElementPropertySource extends URNElementPropertySourc
             Collections.sort(list, new EObjectClassNameComparator());
             for (int i = 0; i < list.size(); i++) {
                 if (list.get(i).equals(((KPIInformationElementRef) getEditableValue()).getDef()))
-                    result = new Integer(i);
+                    result = Integer.valueOf(i);
             }
 
         } else
