@@ -160,7 +160,7 @@ public class ResponsibilityPropertySource extends URNElementPropertySource {
             Collections.sort(list, new EObjectClassNameComparator());
             for (int i = 0; i < list.size(); i++) {
                 if (list.get(i).equals(((RespRef) getEditableValue()).getRespDef()))
-                    result = new Integer(i);
+                    result = Integer.valueOf(i);
             }
 
         } else
